[package]
name = "gtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
ratatui = "0.26.0"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
